--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-black display-4" href="eventos.html">Eventos</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="empresarial.html">Viandas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="delivery.html">Delivery</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="contacto.html">Contacto</a></li></ul>
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://mobirise.co"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"><br></span>
-                    </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header11 cid-rasyhXqipg" id="header11-3">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header11 cid-rasyhXqipg" id="header11-3">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
