--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/logosololetras.ai-122x61.png" alt="Mobirise" title="" style="height: 5.2rem;">
                     </a>
                 </span>
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header11 cid-rasyhXqipg" id="header11-3">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header11 cid-rasyhXqipg" id="header11-3">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
