--- a/eventos.html
+++ b/eventos.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/logosololetras.ai-122x61.png" alt="Mobirise" title="" style="height: 5.2rem;">
                     </a>
                 </span>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="header5 cid-rb6mtevz1l" id="header5-a">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header5 cid-rb6mtevz1l" id="header5-a">
 
     
 
